# cicd-pipeline-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  architecture.mmd  research_report.md
examples/: go_k8s.yml  nodejs_heroku.yml  python_docker.yml
src/: __init__.py  cli.py  generator.py  questionnaire.py
src/strategies/: __init__.py  blue_green.py  canary.py  rolling.py
src/templates/: __init__.py  azure_devops.py  circleci.py  github_actions.py  gitlab_ci.py  jenkins.py
src/utils/: __init__.py  file_writer.py
src/validators/: __init__.py  security_check.py  syntax_check.py
tests/: __init__.py  test_cli.py  test_generator.py  test_templates.py  test_validators.py
