[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-pipeline-generator"
version = "1.0.0"
description = "Generate CI/CD pipeline configurations for multiple platforms"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mani", email = "myfamily9006@gmail.com"}
]
keywords = [
    "cicd",
    "devops",
    "pipeline",
    "github-actions",
    "gitlab-ci",
    "jenkins",
    "azure-devops",
    "circleci",
    "generator",
    "deployment",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
cicd-gen = "src.cli:main"

[project.urls]
Homepage = "https://github.com/example/cicd-pipeline-generator"
Documentation = "https://github.com/example/cicd-pipeline-generator#readme"
Repository = "https://github.com/example/cicd-pipeline-generator"
Issues = "https://github.com/example/cicd-pipeline-generator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
